--- a/notes/01-finite-state-gambling.tex
+++ b/notes/01-finite-state-gambling.tex
@@ -1,10 +1,10 @@
 \documentclass[../main.tex]{subfiles}
- 
+
 \begin{document}
 
 Let $\Sigma$ be an alphabet with $2 \leq |\Sigma| < \infty$. That is, $\Sigma$
 is finite.
-A probability measure on $\Sigma$ is a function: 
+A probability measure on $\Sigma$ is a function:
 \begin{align*}
     & \pi: \Sigma \rightarrow [0, \infty)
 \end{align*}
@@ -43,7 +43,7 @@ Note that $\Delta(\Sigma)$ is a $(|\Sigma| - 1)$-dimensional simplex in $\R^{|\S
     DIAGRAM
 \end{exmp}
 
-Given an FSA, $A = (Q, \delta, s)$ on $\Sigma$, we define the extended-transition 
+Given an FSA, $A = (Q, \delta, s)$ on $\Sigma$, we define the extended-transition
 function:
 \begin{align*}
     & \hat{\delta}:Q\times\Sigma^{*} \rightarrow Q
@@ -82,14 +82,14 @@ was $a$, you will have $d(a)$, an amount that we now specify.
 
 Suppose that the outcomes of this experiment occur according to a probability
 measure $\pi \in \Delta(\Sigma)$. What is your expected amount of money after
-the bet, given that you had $d$ dollars? 
+the bet, given that you had $d$ dollars?
 
 Answer:
 \begin{equation*}
     \sum_{a \in \Sigma} \pi(a)d(a) = \mathbb{E}_{\pi}[d(a) | d]
 \end{equation*}
 
-Therefore ``the payoffs are fair" if:
+Therefore ``the payoffs are fair'' if:
 \begin{equation*}
     d = \sum_{a \in \Sigma} \pi(a)d(a)
 \end{equation*}
@@ -99,11 +99,11 @@ A bet on $\Sigma$ is a probability measure $\beta \in \Delta_{\Q}(\Sigma)$.
 For now, a payoff rule on $\Sigma$ is a probability measure $\rho \in \Delta(\Sigma)$.
 
 \textbf{Intuition:}
-    Assume that a gambler has $d \in [0, \infty)$ dollars and places a bet, 
+    Assume that a gambler has $d \in [0, \infty)$ dollars and places a bet,
 $\beta$ on an experiment that will have an outcome that is an element of $\Sigma$.
 Placing this bet means that, $(\forall a \in \Sigma)$, the gambler is betting
 $d\beta(a)$ dollars that the outcome is $a$. Note that $d = \sum_{a \in \Sigma} d\beta(a)$,
-so the gambler is required to bet all its money. 
+so the gambler is required to bet all its money.
 
     If the payoff rule is $\rho \in \Delta(\Sigma)$, and the actual outcome is
 $a \in \Sigma$, then the gambler will have:
@@ -119,17 +119,17 @@ bet (given that it has $d$ dollars before the bet) is:
 \begin{equation}
     \mathbb{E}_{a\sim\pi}[d(a)] := \sum_{a \in \Sigma} d(a)\pi(a),
 \end{equation}
-where $a\sim\pi$ means ``a is drawn according to $\pi$". By (2.1) and (2.2),
+where $a\sim\pi$ means ``a is drawn according to $\pi$''. By (2.1) and (2.2),
 \begin{equation}
     \mathbb{E}_{a\sim\pi}[d(a)] = d \sum_{a \in \Sigma} \frac{\beta(a)\pi(a)}{\rho(a)}
 \end{equation}
 
 \textbf{Observation:}
 If $\rho = \pi$, i.e., the payoff rule is the actual probability measure on $\Sigma$,
-then the payoffs are fair in the sense that $\textbf{E}_{a \sim \pi}[d(a) = d$.
+then the payoffs are fair in the sense that $\mathbb{E}_{a \sim \pi}[d(a)] = d$.
 
 \begin{defn}
-    A finite state gambler (FSA) on $\Sigma$ is a 5-tuple, $G = (Q, \delta, s, \beta, c)$, where:
+    A finite state gambler (FSG) on $\Sigma$ is a 5-tuple, $G = (Q, \delta, s, \beta, c)$, where:
 \begin{itemize}
     \item $(Q, \delta, s)$ is a FSA,
     \item $\beta: Q \rightarrow \Delta_{\Q}(\Sigma)$ is the betting function,
@@ -143,16 +143,16 @@ then the payoffs are fair in the sense that $\textbf{E}_{a \sim \pi}[d(a) = d$.
 
 \textbf{Intuition:}
 
-    Before defining the semantics of FSGs formally, let us use example 1.3 to
+    Before defining the semantics of FSGs formally, let us use example 2.5 to
 gain some insight. Assume that $G$ is given an input string $w \in \{0, 1\}^{*}$,
 whose bits are chosen by independent tosses of a fair coin, and asusme that the
 payoff rule coincides with this. Let $d_{G}(w)$ denote the amount of money that
 $G$ has after betting on $w$. Then:
 \begin{align*}
-    & d_{G}(\lambda) = c = 1
-    & d_{G}(1) = \frac{4}{3} = 2\frac{2}{3}d_{G}(\lambda)
-    & d_{G}(11) = 2\frac{1}{3}d_{G}(1) = \frac{8}{9}
-    & d_{G}(110) = 2\frac{2}{3}d_{G}(11) = frac{32}{27}
+    & d_{G}(\lambda) = c = 1 \\
+    & d_{G}(1) = \frac{4}{3} = 2\frac{2}{3}d_{G}(\lambda) \\
+    & d_{G}(11) = 2\frac{1}{3}d_{G}(1) = \frac{8}{9} \\
+    & d_{G}(110) = 2\frac{2}{3}d_{G}(11) = \frac{32}{27} \\
     & ...
 \end{align*}
 
@@ -164,8 +164,8 @@ then the $\pi$-martingale of $G$ is the function:
 \end{equation*}
 defined by the recursion:
 \begin{align*}
-    d^{\pi}_{G}(\lambda) = c
-    d^{\pi}_{G}(wa) = d^{\pi}_{G}(w) \frac{\beta(\delta(w))(a)}{\pi(a)}
+    & d^{\pi}_{G}(\lambda) = c \\
+    & d^{\pi}_{G}(wa) = d^{\pi}_{G}(w) \frac{\beta(\delta(w))(a)}{\pi(a)}
 \end{align*}
 \end{defn}
 
