Added introduction material.
Signed-off-by: Alexander Scheel <alexander.m.scheel@gmail.com>

--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\R}{\mathbb{R}}
 
+\numberwithin{equation}{section}
 
 \theoremstyle{plain}
 \newtheorem{thm}{Theorem}[section]
@@ -22,22 +23,22 @@
 
 
 \usepackage{subfiles}
- 
+
 \title{COMS 633: \\ Advanced Topics in Computational Randomness \\
     \large Lecture Notes - Fall 2017}
 \author{Professor: Dr. Jack Lutz \\ Notes by: Alex Scheel}
 \date{ Updated: 08-31-2017 }
- 
+
 \begin{document}
- 
+
 \maketitle
- 
+
 \section{Introduction}
- 
+
 \subfile{notes/00-introduction}
 
 \section{Finite-State Gambling}
 
-\subfile{notes/01-finite-state-gambling} 
- 
+\subfile{notes/01-finite-state-gambling}
+
 \end{document}
